--- a/lucrucudiv.html
+++ b/lucrucudiv.html
@@ -19,6 +19,15 @@
    
    <div style="height: 400px; border: 13px solid red; background-color:powderblue;">
    <h1> Div </h1></div>
+   
+   <div style="height: 150px; border: 20px solid orange; background-color:yellow;">
+   <h1> Acesta este un div </h1></div>
+   </div>
+   
+   <div style="height: 250px; border: 13px solid pink; background-color:blue;">
+  
+   </div>
+   
    </div>
    
    
