--- a/arta.html
+++ b/arta.html
@@ -1,17 +1,18 @@
 <html>
    <head>
       <title>
-           Domenii de Interes pentru Elevi
+          ARTA
       </title>
+	  
 	  <style>
 	  ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: #78281F;
   width: 700px;
-  }
+}
 
 li {
   float: left;
@@ -19,7 +20,7 @@ li {
 
 li a {
   display: block;
-  color: white;
+  color: pink;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -29,12 +30,12 @@ li a {
 	  
 	  
    </head>
-
-<div style="height: 70px; width: 700px; background-color: gray;">
-   <h1 align="center"> HOME</h1></div>
+<div style="height: 70px; width: 700px; background-color: pink;">
+   <h1 align="center"> ARTA </h1></div>
    </div>
+
 <body>
-<ul align="centre">
+<ul style:"red">
 <li><a href="index.html">HOME</a></li>
 <li><a href="stiinta.html">STIINTA</a></li>
  <li><a href="arta.html">ARTA</a></li>
@@ -42,7 +43,7 @@ li a {
 <li> <a href="tehnologie.html">TEHNOLOGIE</a> </li>
 </ul>
 
-<div style="height: 500px; width: 660px; border: 20px solid gray; background-color:gray;">
+<div style="height: 500px; width: 660px; border: 20px solid pink; background-color:pink;">
       <div>
 	<div style="height:475px; width: 320px; border: 13px solid black; background-color:white; display: inline; float:left;">
 	</div>
@@ -52,11 +53,10 @@ li a {
 	  </div>
    </div>
      </div>
-
-<div style="height:70px; width: 660px; border: 20px solid #333; background-color: white;">
+	 
+	 <div style="height:70px; width: 660px; border: 20px solid #78281F; background-color: white;">
 	 </div>
-
-
+	 
 </body>
 
 
