--- a/sport.html
+++ b/sport.html
@@ -1,7 +1,7 @@
 <html>
    <head>
       <title>
-           Domenii de Interes pentru Elevi
+          SPORT
       </title>
 	  <style>
 	  ul {
@@ -9,9 +9,9 @@
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: #784212;
   width: 700px;
-  }
+}
 
 li {
   float: left;
@@ -19,7 +19,7 @@ li {
 
 li a {
   display: block;
-  color: white;
+  color: #F7DC6F;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -30,19 +30,20 @@ li a {
 	  
    </head>
 
-<div style="height: 70px; width: 700px; background-color: gray;">
-   <h1 align="center"> HOME</h1></div>
+<div style="height: 70px; width: 700px; background-color: #F7DC6F;">
+   <h1 align="center"> SPORT</h1></div>
    </div>
 <body>
-<ul align="centre">
+<ul style:"red">
 <li><a href="index.html">HOME</a></li>
 <li><a href="stiinta.html">STIINTA</a></li>
  <li><a href="arta.html">ARTA</a></li>
 <li><a href="sport.html">SPORT</a> </li>
 <li> <a href="tehnologie.html">TEHNOLOGIE</a> </li>
+
 </ul>
 
-<div style="height: 500px; width: 660px; border: 20px solid gray; background-color:gray;">
+<div style="height: 500px; width: 660px; border: 20px solid #F7DC6F; background-color:#F7DC6F;">
       <div>
 	<div style="height:475px; width: 320px; border: 13px solid black; background-color:white; display: inline; float:left;">
 	</div>
@@ -53,8 +54,9 @@ li a {
    </div>
      </div>
 
-<div style="height:70px; width: 660px; border: 20px solid #333; background-color: white;">
+<div style="height:70px; width: 660px; border: 20px solid #784212; background-color: white;">
 	 </div>
+
 
 
 </body>
