--- a/stiinta.html
+++ b/stiinta.html
@@ -1,7 +1,7 @@
 <html>
    <head>
       <title>
-           Domenii de Interes pentru Elevi
+           STIINTA
       </title>
 	  <style>
 	  ul {
@@ -9,7 +9,7 @@
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: #154360;
   width: 700px;
   }
 
@@ -19,7 +19,7 @@ li {
 
 li a {
   display: block;
-  color: white;
+  color: powderblue;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -29,12 +29,12 @@ li a {
 	  
 	  
    </head>
-
-<div style="height: 70px; width: 700px; background-color: gray;">
-   <h1 align="center"> HOME</h1></div>
+<div style="height: 70px; width: 700px; background-color: powderblue;">
+   <h1 align="center"> STIINTA</h1></div>
    </div>
+
 <body>
-<ul align="centre">
+<ul style:"red">
 <li><a href="index.html">HOME</a></li>
 <li><a href="stiinta.html">STIINTA</a></li>
  <li><a href="arta.html">ARTA</a></li>
@@ -42,7 +42,7 @@ li a {
 <li> <a href="tehnologie.html">TEHNOLOGIE</a> </li>
 </ul>
 
-<div style="height: 500px; width: 660px; border: 20px solid gray; background-color:gray;">
+<div style="height: 500px; width: 660px; border: 20px solid powderblue; background-color:powderblue;">
       <div>
 	<div style="height:475px; width: 320px; border: 13px solid black; background-color:white; display: inline; float:left;">
 	</div>
@@ -52,11 +52,9 @@ li a {
 	  </div>
    </div>
      </div>
-
-<div style="height:70px; width: 660px; border: 20px solid #333; background-color: white;">
+	 
+	 <div style="height:70px; width: 660px; border: 20px solid #154360; background-color: white;">
 	 </div>
-
-
 </body>
 
 
